removing need for superuser right when installing and running singularity

--- a/containers/K1/docker/Dockerfile
+++ b/containers/K1/docker/Dockerfile
@@ -24,7 +24,7 @@
 # one of the top performing teams: Team Tusk
 ###############################################################################
 
-FROM ubuntu:17.10
+FROM ubuntu
 LABEL maintainer="Mattia Tomasoni <mattia.tomasoni@unil.ch>"
 
 ###############################################################################
